kubernetes-manifests/monitoring/thanos/thanos-querier-cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: thanos
    thanos-component: thanos-querier-cache
  name: thanos-querier-cache
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: thanos
      thanos-component: thanos-querier-cache
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thanos
        thanos-component: thanos-querier-cache
    spec:
      containers:
      - args:
        - -config.file=/etc/cache-config/cortex-cache-conf.yaml
        - -frontend.downstream-url=http://thanos-querier.monitoring.svc.cluster.local:9090
        image: quay.io/cortexproject/cortex:v0.4.0
        name: cortex-querier-cache
        resources:
          requests:
            cpu: 50m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        ports:
        - containerPort: 9000
          name: http
        volumeMounts:
        - mountPath: /etc/cache-config/
          name: querier-cache-config
          readOnly: false
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
      volumes:
      - configMap:
          name: cortex-querier-cache
        name: querier-cache-config
