kubernetes-manifests/monitoring/thanos/thanos-compactor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: thanos
    thanos-component: thanos-compactor
  name: thanos-compactor
  namespace: monitoring
spec:
  clusterIP: None
  ports:
  - name: http
    port: 10902
    targetPort: http
  selector:
    app.kubernetes.io/name: thanos
    thanos-component: thanos-compactor
