kubernetes-manifests/monitoring/thanos/thanos-querier-cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: thanos
    thanos-component: thanos-querier-cache
  name: thanos-querier-cache
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 9090
    targetPort: 9090
  selector:
    app.kubernetes.io/name: thanos
    thanos-component: thanos-querier-cache
