kubernetes-manifests/monitoring/thanos/thanos-querier-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: thanos
    thanos-component: thanos-querier
  name: thanos-querier
  namespace: monitoring
spec:
  ports:
  - name: grpc
    port: 10901
    targetPort: grpc
  - name: http
    port: 9090
    targetPort: http
  selector:
    app.kubernetes.io/name: thanos
    thanos-component: thanos-querier
