kubernetes-manifests/monitoring/thanos/thanos-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-ingress
  namespace: monitoring
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`thanos.rascal.local`)
    kind: Rule
    services:
    - name: thanos-querier-cache
      port: 9090
      scheme: http
